--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body>header>nav>ul>li { display: inline-block; }
 body>header>nav>ul>li>a {
     display: block;
     padding: 1em;
-    color: White;
+    color: black;
     text-decoration: none;
 }
 body>main { padding: 1em; }
@@ -22,4 +22,40 @@ body>div {
     padding: 1em;
     width: 33.3%;
     vertical-align: top;
+}
+
+.dropbtn {
+    background-color: #181634;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #181634;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    border: 1px solid #ddd;
+    z-index: 1;
+}
+
+.show {display:block;}
+
+.dropdown-content input {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
